// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LoadBalancersDropdown /> when load balancer list needs to be fetched renders correctly 1`] = `
<LoadBalancersDropdown
  getLoadBalancers={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  input={
    Object {
      "onChange": [MockFunction],
    }
  }
  loadBalancerValues={
    Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "values": Array [],
    }
  }
  organization={
    Object {
      "fulfilled": true,
      "pending": false,
    }
  }
  quota={Object {}}
>
  <div
    className="spinner-fit-container"
  >
    <Spinner>
      <div
        className="ins-c-spinner"
        role="status"
      >
        <span
          className="pf-u-screen-reader"
        >
          Loading...
        </span>
      </div>
    </Spinner>
  </div>
  <div
    className="spinner-loading-text"
  >
    Loading load balancers list...
  </div>
</LoadBalancersDropdown>
`;

exports[`<LoadBalancersDropdown /> when the load balancer list is available renders correctly 1`] = `
<LoadBalancersDropdown
  getLoadBalancers={[MockFunction]}
  input={
    Object {
      "onChange": [MockFunction],
    }
  }
  loadBalancerValues={
    Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": true,
      "pending": false,
      "values": Array [
        0,
        4,
        8,
      ],
    }
  }
  organization={
    Object {
      "fulfilled": true,
      "pending": false,
    }
  }
  quota={
    Object {
      "loadBalancerQuota": 4,
    }
  }
>
  <Tooltip
    appendTo={[Function]}
    aria="describedby"
    boundary="window"
    className=""
    content="You do not have quota for this option. Contact sales to purchase additional quota."
    distance={15}
    enableFlip={true}
    entryDelay={500}
    exitDelay={500}
    flipBehavior={
      Array [
        "top",
        "right",
        "bottom",
        "left",
        "top",
        "right",
        "bottom",
      ]
    }
    id=""
    isAppLauncher={false}
    isContentLeftAligned={false}
    isVisible={false}
    maxWidth="18.75rem"
    position="right"
    tippyProps={Object {}}
    trigger="mouseenter focus"
    zIndex={9999}
  >
    <PopoverBase
      appendTo={[Function]}
      aria="describedby"
      arrow={true}
      boundary="window"
      content={
        <div
          className=""
          id=""
          role="tooltip"
        >
          <TooltipContent
            isLeftAligned={false}
          >
            You do not have quota for this option. Contact sales to purchase additional quota.
          </TooltipContent>
        </div>
      }
      delay={
        Array [
          500,
          500,
        ]
      }
      distance={15}
      flip={true}
      flipBehavior={
        Array [
          "top",
          "right",
          "bottom",
          "left",
          "top",
          "right",
          "bottom",
        ]
      }
      isVisible={false}
      lazy={true}
      maxWidth="18.75rem"
      onCreate={[Function]}
      placement="right"
      popperOptions={
        Object {
          "modifiers": Object {
            "hide": Object {
              "enabled": true,
            },
            "preventOverflow": Object {
              "enabled": true,
            },
          },
        }
      }
      theme="pf-tooltip"
      trigger="mouseenter focus"
      zIndex={9999}
    >
      <div>
        <FormSelect
          aria-label="Load Balancers"
          className="quota-dropdown"
          isDisabled={true}
          isRequired={false}
          onBlur={[Function]}
          onChange={[MockFunction]}
          onFocus={[Function]}
          ouiaSafe={true}
          validated="default"
          value=""
        >
          <select
            aria-invalid={false}
            aria-label="Load Balancers"
            className="pf-c-form-control quota-dropdown"
            data-ouia-component-id={2}
            data-ouia-component-type="PF4/FormSelect"
            data-ouia-safe={true}
            disabled={true}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            value=""
          />
        </FormSelect>
      </div>
      <Portal
        containerInfo={
          <div>
            <div
              class=""
              id=""
              role="tooltip"
            >
              <div
                class="pf-c-tooltip__content"
              >
                You do not have quota for this option. Contact sales to purchase additional quota.
              </div>
            </div>
          </div>
        }
      >
        <div
          className=""
          id=""
          role="tooltip"
        >
          <TooltipContent
            isLeftAligned={false}
          >
            <div
              className="pf-c-tooltip__content"
            >
              You do not have quota for this option. Contact sales to purchase additional quota.
            </div>
          </TooltipContent>
        </div>
      </Portal>
    </PopoverBase>
  </Tooltip>
</LoadBalancersDropdown>
`;

exports[`<LoadBalancersDropdown /> when the request is pending renders correctly 1`] = `
<LoadBalancersDropdown
  getLoadBalancers={[MockFunction]}
  input={
    Object {
      "onChange": [MockFunction],
    }
  }
  loadBalancerValues={
    Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": true,
      "values": Array [],
    }
  }
  organization={
    Object {
      "fulfilled": true,
      "pending": false,
    }
  }
  quota={Object {}}
>
  <div
    className="spinner-fit-container"
  >
    <Spinner>
      <div
        className="ins-c-spinner"
        role="status"
      >
        <span
          className="pf-u-screen-reader"
        >
          Loading...
        </span>
      </div>
    </Spinner>
  </div>
  <div
    className="spinner-loading-text"
  >
    Loading load balancers list...
  </div>
</LoadBalancersDropdown>
`;

exports[`<LoadBalancersDropdown /> when there was an error renders correctly 1`] = `
<LoadBalancersDropdown
  getLoadBalancers={[MockFunction]}
  input={
    Object {
      "onChange": [MockFunction],
    }
  }
  loadBalancerValues={
    Object {
      "error": true,
      "errorMessage": "This is an error message",
      "fulfilled": false,
      "pending": false,
      "values": Array [],
    }
  }
  organization={
    Object {
      "fulfilled": true,
      "pending": false,
    }
  }
  quota={Object {}}
>
  <ErrorBox
    message="Error loading load balancers list"
    response={
      Object {
        "error": true,
        "errorMessage": "This is an error message",
        "fulfilled": false,
        "pending": false,
        "values": Array [],
      }
    }
  >
    <Alert
      className="error-box"
      isInline={true}
      title="Error loading load balancers list"
      variant="danger"
    >
      <div
        aria-label="Danger Alert"
        className="pf-c-alert pf-m-inline pf-m-danger error-box"
        data-ouia-component-id={0}
        data-ouia-component-type="PF4/Alert"
        data-ouia-safe={true}
      >
        <Component
          variant="danger"
        >
          <div
            className="pf-c-alert__icon"
          >
            <ExclamationCircleIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
            >
              <svg
                aria-hidden={true}
                aria-labelledby={null}
                fill="currentColor"
                height="1em"
                role="img"
                style={
                  Object {
                    "verticalAlign": "-0.125em",
                  }
                }
                viewBox="0 0 512 512"
                width="1em"
              >
                <path
                  d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                  transform=""
                />
              </svg>
            </ExclamationCircleIcon>
          </div>
        </Component>
        <h4
          className="pf-c-alert__title"
        >
          <span
            className="pf-u-screen-reader"
          >
            Danger alert:
          </span>
          Error loading load balancers list
        </h4>
        <div
          className="pf-c-alert__description"
        >
          <span>
            This is an error message
          </span>
          <br />
          <span>
            Operation ID: N/A
          </span>
        </div>
      </div>
    </Alert>
  </ErrorBox>
</LoadBalancersDropdown>
`;
